Fixing gapping issues on mobile

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header {
 }
 
 #notice {
-    width: 100%;
+    width: calc(100% - 80px);
     height: 36px;
     display: flex;
     align-items: center;
@@ -39,6 +39,7 @@ header {
     position: fixed;
     top: 96px;
     font-size: 12px;
+    padding: 2px 40px;
 }
 
 #name {
